--- a/project.config
+++ b/project.config
@@ -1,9 +1,4 @@
 [access]
 	inheritFrom = scm/acls/domain_system/uncategorized
 [project]
-	description = "Domain: Base;"\n\
-"Maintainers: Junfeng Dong,Shinjae Lee;"\n\
-"Integrators: Seokhyun Kim;"\n\
-"Reviewers: Jungmin Cho;"\n\
-"Licenses: LGPL-3.0+;"\n\
-
+	description = "Domain: System / Uncategorized;"
